# OOP

EC1_sourceCode/: ExtraCredit.cpp  distribution.txt
EC2_sourceCode/: code.cpp  code.h  decoder.cpp  defines.h  encoder.cpp  exemplu.txt  huffman.cpp  huffman.h  io.cpp  io.h  node.cpp  node.h
EC3_sourceCode/: BrightnessContrastAdjustment.h  Drawing.cpp  Drawing.h  GammaCorrection.h  Image.cpp  Image.h  ImageConvolution.h  ImageProcessing.h  Point.h  Rectangle.h  Size.h  main.cpp
EC4_sourceCode/: CMakeLists.txt  GameStats.h  Graph.h  WordLadderEngine.h  dictionary.txt  main.cpp  mainwindow.cpp  mainwindow.h
